# GameOfLife

./: .dockerignore  Dockerfile  GameOfLife.cabal  LICENSE  README.md  game-of-haskell.cabal  game-of-life.cabal  stack.yaml
assets/scripts/: app.js  app.jsx  console.js  gameBoard.js  utils.js
assets/scripts/components/: GameBoard.jsx
assets/styles/: console.css  screen.css
snaplets/heist/templates/: base.tpl  console.tpl  gameOfLife.tpl  index.tpl  test.tpl
src/: Application.hs  Main.hs  Site.hs
src/GameOfHaskell/: Core.hs  Patterns.hs
src/GameOfLife/: Core.hs  Snaplet.hs
test/: Spec.hs
