name:                game-of-life
version:             0.1
synopsis:            Conway's Game of Life
description:         Conway's Game of Life implemented in Haskell, Snap, React and Websockets
license:             BSD3
license-file:        LICENSE
homepage:            https://github.com/stesta/GameOfLife#readme
author:              Steve Testa <steve@testasoftware.com>
maintainer:          Steve Testa <steve@testasoftware.com>
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2
extra-Source-Files:  README.md

executable game-of-life
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                  -fno-warn-orphans -fno-warn-unused-do-bind            
  other-modules:
    Application,
    Site

  build-depends:
    base,
    bytestring,
    containers,
    heist,
    lens,
    map-syntax,
    monad-control,
    mtl,
    process,
    snap,
    snap-core,
    snap-server,
    text,
    time,
    websockets,
    websockets-snap,
    xmlhtml
